<resources>
    <string name="app_name">Artists for you</string>
    <string name="welcome">Artists for you</string>
    <string name="button_start"> start </string>
    <string name="imageView"> music1 </string>
    <string name="imageViewlogo"> logo </string>

    <string name="textView">filters</string>
    <string name="txtpriority">put your priority</string>
    <string name="textView36">Genre:</string>
    <string name="register_what_you">What are you?</string>
    <string name="textView19">Loudness:</string>
    <string name="textView38">Beat:</string>
    <string name="textView39">Language:</string>
    <string name="instrument">Musical Instrument:</string>
    <string name="textViewPop">The most popular?</string>
    <string name="button">find!</string>
    <string name="next">Next Step</string>
    <string name="buttonRegister">Register me!</string>
    <string name="top_10_result">Top 10</string>
    <string name="result">Results</string>
    <string name="back_button">back</string>
    <string name="button2">finish</string>
    <string name="btnSingers">Singers</string>
    <string name="btnComposer" translatable="false">Composers</string>
    <string name="btexit">Exit</string>
    <string name="Top5Sol">Top 5 for you:</string>
    <string name="allSol_button">View all results</string>
    <string name="btnPoets">SongWriter</string>
    <string name="btMoreSolSingers">All Results</string>
    <string name="btregistration">Registration</string>
    <string name="txtRegistration">Registration</string>
    <string name="txtName">Name</string>
    <string name="Subject">Subject:</string>
    <string name="Goal">Goal:</string>
    <string name="main">In this application you can find Singers, Songwriters and Composers according to your preferences.\nYou can register as a Singer, SongWriter or Composer and thus increase your chances of success.</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="search">Search</string>
    <string name="add_video">Add new video</string>
    <string name="settings">Settings</string>
    <string name="register_text">Singer? Song writer? Composer? \n
        Want register to our app so that users from around the world can contact you?\n
        You came to the right place!\n Here you can use a few simple steps to be added to our database.\
        Successfully!</string>
    <string name="priority_text">Before viewing your results,
        please fill in your priority for each filters so we can return the results that are best for you :)
    </string>
    <string name="errorFilters">"Please select all filters"</string>
    <string name="errorPriority">"Please select different priority for each filter"</string>

    <string name="errorRegistration">"All fields must be filled in"</string>
    <string name="ID">ID</string>
    <string name="nameColumn">Name</string>
    <string name="percentColumn">Match percent</string>
    <string name="explationPriority">High: The match will only include artists with this characteristic \nMedium: The match can include artists with a similar but not identical characteristic \nLow: The match can include artists with a not so similar characteristic  </string>
    <string name="DuplicationID">Are you already registered in our database, would you like to register again with other parameters?</string>
    <string name="explanationLoudnessTempo">Tempo can get only values between 0 and 300 \nLoudness can get only values between -50 and -1</string>

</resources>
