<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">

    <Button
        android:id="@+id/singers2"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="377dp"
        android:background="@color/colorAccent"

        android:onClick="registration_click"
        android:text="@string/btnSingers"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/composer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="294dp"
        android:background="@color/colorAccent"

        android:onClick="registration_click"
        android:text="@string/btnComposer"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/poets2"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="222dp"
        android:background="@color/colorAccent"

        android:onClick="registration_click"
        android:text="@string/btnPoets"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp"
        android:textStyle="normal|bold" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:fontFamily="serif-monospace"
        android:text="@string/txtRegistration"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/back_buttom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="151dp"
        android:layout_marginBottom="79dp"
        android:onClick="back_choice_click"
        android:text="@string/back_button" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/register_text"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        android:textStyle="bold" />

    <!--- <TextView
         android:id="@+id/txWhat_you"
         android:layout_width="wrap_content"
         android:layout_height="217dp"
         android:layout_marginStart="120dp"
         android:layout_marginBottom="150dp"
         android:text="@string/register_what_you"
         android:textAlignment="center"
         android:textSize="30sp"
         android:textStyle="bold" />-->

</RelativeLayout>