<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/welcome_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="278dp"
            android:layout_height="130dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="103dp"
            android:hint="@string/welcome"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="50sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:fontFamily="serif-monospace" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"
            android:background="@color/colorAccent"

            android:onClick="find_click"
            android:text="@string/button_start"
            android:textColor="@android:color/holo_red_light"
            android:textSize="30sp"
            android:textStyle="normal|bold" />
        <Button
            android:id="@+id/btnexit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            android:background="@color/colorAccent"

            android:onClick="exit_click"
            android:text="@string/btexit"
            android:textColor="@android:color/holo_red_light"
            android:textSize="30sp"
            android:textStyle="normal|bold" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="156dp"
            android:layout_height="113dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="105dp"
            android:layout_marginBottom="150dp"
            android:contentDescription="@string/imageView"
            app:srcCompat="@drawable/music" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>