<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark">


    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/GridLayout2"
        android:layout_width="360dp"
        android:layout_height="336dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="142dp"
        android:columnCount="2"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        android:rowCount="5"
        android:useDefaultMargins="true"
        tools:context=".GridXMLActivity">


        <TextView
            android:id="@+id/textView39"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:fontFamily="serif-monospace"
            android:text="@string/txtName"
            android:textAlignment="viewStart"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nameAdd"
            android:layout_width="127dp"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:id="@+id/text"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:fontFamily="serif-monospace"
            android:text="@string/ID"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/IDAdd"
            android:layout_width="127dp"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="172dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:fontFamily="serif-monospace"
            android:text="@string/textView36"
            android:textAlignment="textStart"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/register_what_you"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_gravity="fill"
            android:fontFamily="serif-monospace"
            android:text="@string/Subject"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:fontFamily="serif-monospace"
            android:text="@string/Goal"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal" />




    </GridLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@android:color/background_light"
        android:onClick="registration_poets_click"
        android:text="@string/buttonRegister"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:fontFamily="serif-monospace"
        android:text="@string/textView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>