<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFC008C7">


    <SeekBar
        android:id="@+id/seekBar2"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:max="3"
        android:progress="1" />

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/GridLayout2"
        android:layout_width="320dp"
        android:layout_height="240dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="142dp"
        android:columnCount="2"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        android:rowCount="3"
        android:useDefaultMargins="true"
        tools:context=".GridXMLActivity">


        <TextView
            android:id="@+id/textView36"
            android:layout_width="172dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:fontFamily="serif-monospace"
            android:text="@string/textView36"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/register_what_you"
            android:layout_width="130dp"
            android:layout_gravity="fill_horizontal"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_gravity="fill"
            android:fontFamily="serif-monospace"
            android:text="@string/textView19"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:id="@+id/textView38"
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:fontFamily="serif-monospace"
            android:text="@string/textView38"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal" />

    </GridLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@android:color/background_light"
        android:onClick="filters_click"
        android:text="@string/button"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_red_light"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:fontFamily="serif-monospace"
        android:text="@string/textView"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/back_buttom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="280dp"
        android:layout_marginBottom="50dp"
        android:onClick="backSingerORProduct_click"
        android:text="@string/back_button" />

</RelativeLayout>