<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Singers.Activity.SolutionSinger_Tab1"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#CF5F04"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/btAllSolPoets"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="255dp"
            android:layout_marginBottom="15dp"
            android:background="@android:color/background_light"
            android:onClick="allSol_click"
            android:text="@string/btMoreSolSingers"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/holo_red_light"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="serif-monospace"/>

        <TextView
            android:id="@+id/txtResults"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="98dp"
            android:layout_marginTop="42dp"
            android:fontFamily="serif-monospace"
            android:text="@string/top_10_result"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="200dp"
            android:layout_height="561dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="120dp"
            android:fontFamily="serif-monospace"
            android:textColor="@color/colorText"/>

        <ListView
            android:id="@+id/listView2"
            android:layout_width="84dp"
            android:layout_height="561dp"
            android:layout_marginStart="250dp"
            android:layout_marginTop="120dp"
            android:fontFamily="serif-monospace"
            android:textColor="@color/colorText"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="85dp"
            android:fontFamily="serif-monospace"
            android:text="@string/nameColumn"
            android:textColor="@color/colorText"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="85dp"
            android:fontFamily="serif-monospace"
            android:text="@string/percentColumn"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="18dp"
            android:textStyle="bold" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>